Adds jQuery card building and styling

--- a/index.html
+++ b/index.html
@@ -13,27 +13,21 @@
 </head>
 
 <body>
-<nav class="social">
-	<a>
-		
-	</a>
-	<a>
-		
-	</a>
-</nav>
-<header>
-	<h1>_lukas\ lennstring</h1>
-</header>
+	<header>
+		<h1>_lukas\ lennstring</h1>
+	</header>
+
   <h2>_works</h2>
   <div class="thingContainer">
-		<p>what is this font tell me now</p>
   </div>
 
   <h2>_find\ me</h2>
-  <div class="linkContainer">
-
+  <div class="links">
   </div>
 
+	<div class="footer"></div>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="script.js"></script>
 </body>
 
